# residencia-embarcatech

./: .gitignore  README.md
Software Embarcados/marcos.silva/tarefa-3/: README.MD  link_video.txt  mqttHA.yaml  tarefa-3.c
Software Embarcados/tarefa-1-paralelismo/: CMakeLists.txt  README.MD  link_video.txt  tarefa-1-paralelismo.c
Software Embarcados/tarefa-1-paralelismo/inc/: ssd1306_i2c.c
Software Embarcados/tarefa-2/: .gitignore  CMakeLists.txt  FreeRTOSConfig_arch.h  lwipopts.h  lwipopts_freertos.h  tarefa-2.c
Software Embarcados/tarefa-2-comunicacao-iot/: CMakeLists.txt  README.MD  tarefa-2-comunicacao-iot.c
Software Embarcados/tarefa-2-comunicacao-iot/mqtt_handler/: mqtt_handler.c  mqtt_handler.h
Software Embarcados/tarefa-2-comunicacao-iot/wifi/: wifi_conection.c  wifi_parametros.h
Software Embarcados/tarefa-2-iot/: .gitignore  CMakeLists.txt  link_video.txt  tarefa-2-iot.c
Software Embarcados/tarefa-2-iot/lib/: mbedtls_config_examples_common.h
Software Embarcados/tarefa-3/: .gitignore  CMakeLists.txt  README.MD  mqttHA.yaml  tarefa-3.c
Software Embarcados/tarefa-4/: .gitignore  CMakeLists.txt  FreeRTOSConfig.h  README.MD  mqtt_helper.c  mqtt_helper.h  tarefa-4.c
TAREFA-8/: CMakeLists.txt  TAREFA-8.c
Tarefa 4 - Marcos Moreira/tarefa-4/: tarefa-4.c
atividade-porta-logica/: CMakeLists.txt  atividade-porta-logica.c
portas-logicas/: CMakeLists.txt  portas-logicas.c
tarefa-4/: CMakeLists.txt  tarefa-4.c
tarefa-5/: CMakeLists.txt  tarefa-5.c
tarefa-8-sd/: CMakeLists.txt  tarefa-8-sd.c
tarefa-8-sd/inc/: ssd1306_font.h
(+12 files in other folders)
